fixed bug of alerts not showing up on page. Made an alerts partial to keep main handlebars file clean

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,8 +19,9 @@ body {
 }
 
 .custom-alert {
-  position: absolute;
-  z-index: 1;
+  position: fixed !important;
+  top: 0;
+  z-index: 4;
   width: 100%;
   text-align: center;
 }
